parser.output
State 10 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: class

    2 class: class1 class
    3      | class1

    4 class1: ID extends O_BRAC members methods C_BRAC
    5       | ID extends O_BRAC members C_BRAC
    6       | ID extends O_BRAC methods C_BRAC
    7       | ID extends O_BRAC C_BRAC

    8 members: members type ID SEMICOLON
    9        | type ID SEMICOLON

   10 extends: EXTENDS_T ID
   11        | %empty

   12 methods: method methods
   13        | %empty

   14 method: ID O_PAREN parameters C_PAREN ARROW type O_BRAC body C_BRAC

   15 parameters: type ID parameters1
   16           | %empty

   17 parameters1: COMMA type ID parameters1
   18            | %empty

   19 body: declarations statements return
   20     | statements return

   21 declarations: declarations type id_list
   22             | type id_list

   23 id_list: ID COMMA id_list
   24        | ID SEMICOLON

   25 return: RETURN expression SEMICOLON
   26       | %empty

   27 statements: statement statements
   28           | %empty

   29 statement: assignment
   30          | methodcall SEMICOLON
   31          | if_else
   32          | while_loop
   33          | do_while
   34          | print

   35 assignment: ID ASSIGN expression SEMICOLON
   36           | ID DOT ID ASSIGN expression SEMICOLON

   37 if_else: IF expression O_BRAC block C_BRAC else

   38 else: ELSE O_BRAC block C_BRAC
   39     | %empty

   40 while_loop: WHILE_T expression O_BRAC block C_BRAC

   41 do_while: DO O_BRAC block C_BRAC WHILE_T O_PAREN expression C_PAREN SEMICOLON

   42 print: PRINT expression SEMICOLON

   43 block: statement statements

   44 expression: expression PLUS expression
   45           | expression MINUS expression
   46           | expression MULT expression
   47           | expression DIV expression
   48           | expression GREATER expression
   49           | expression GREATER_EQUAL expression
   50           | expression EQUALS expression
   51           | expression AND expression
   52           | expression OR expression
   53           | NOT expression
   54           | MINUS expression
   55           | ID
   56           | ID DOT ID
   57           | methodcall
   58           | O_PAREN expression C_PAREN
   59           | NUM
   60           | TRUE
   61           | FALSE
   62           | NEW ID
   63           | NEW ID O_PAREN arguments C_PAREN

   64 methodcall: ID O_PAREN arguments C_PAREN
   65           | ID DOT ID O_PAREN arguments C_PAREN

   66 arguments: arguments1
   67          | %empty

   68 arguments1: arguments1 COMMA expression
   69           | expression

   70 type: INTEGER
   71     | BOOLEAN
   72     | ID
   73     | NONE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER (258) 70
    BOOLEAN (259) 71
    DOT (260) 36 56 65
    WHILE_T (261) 40 41
    IF (262) 37
    ELSE (263) 38
    DO (264) 41
    O_PAREN (265) 14 41 58 63 64 65
    C_PAREN (266) 14 41 58 63 64 65
    O_BRAC (267) 4 5 6 7 14 37 38 40 41
    C_BRAC (268) 4 5 6 7 14 37 38 40 41
    PRINT (269) 42
    RETURN (270) 25
    TRUE (271) 60
    FALSE (272) 61
    NEW (273) 62 63
    EXTENDS_T (274) 10
    NUM <base_int> (275) 59
    ID <base_char_ptr> (276) 4 5 6 7 8 9 10 14 15 17 23 24 35 36 55 56 62 63 64 65 72
    SEMICOLON (277) 8 9 24 25 30 35 36 41 42
    COMMA (278) 17 23 68
    NONE (279) 73
    ASSIGN (280) 35 36
    ARROW (281) 14
    OR (282) 52
    AND (283) 51
    GREATER (284) 48
    GREATER_EQUAL (285) 49
    EQUALS (286) 50
    PLUS (287) 44
    MINUS (288) 45 54
    MULT (289) 46
    DIV (290) 47
    NOT (291) 53


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Start <program_ptr> (38)
        on left: 1
        on right: 0
    class <class_list_ptr> (39)
        on left: 2 3
        on right: 1 2
    class1 <class_ptr> (40)
        on left: 4 5 6 7
        on right: 2 3
    members <declaration_list_ptr> (41)
        on left: 8 9
        on right: 4 5 8
    extends <identifier_ptr> (42)
        on left: 10 11
        on right: 4 5 6 7
    methods <method_list_ptr> (43)
        on left: 12 13
        on right: 4 6 12
    method <method_ptr> (44)
        on left: 14
        on right: 12
    parameters <parameter_list_ptr> (45)
        on left: 15 16
        on right: 14
    parameters1 <parameter_list_ptr> (46)
        on left: 17 18
        on right: 15 17
    body <methodbody_ptr> (47)
        on left: 19 20
        on right: 14
    declarations <declaration_list_ptr> (48)
        on left: 21 22
        on right: 19 21
    id_list <identifier_list_ptr> (49)
        on left: 23 24
        on right: 21 22 23
    return <returnstatement_ptr> (50)
        on left: 25 26
        on right: 19 20
    statements <statement_list_ptr> (51)
        on left: 27 28
        on right: 19 20 27 43
    statement <statement_ptr> (52)
        on left: 29 30 31 32 33 34
        on right: 27 43
    assignment <assignment_ptr> (53)
        on left: 35 36
        on right: 29
    if_else <ifelse_ptr> (54)
        on left: 37
        on right: 31
    else <statement_list_ptr> (55)
        on left: 38 39
        on right: 37
    while_loop <while_ptr> (56)
        on left: 40
        on right: 32
    do_while <dowhile_ptr> (57)
        on left: 41
        on right: 33
    print <print_ptr> (58)
        on left: 42
        on right: 34
    block <statement_list_ptr> (59)
        on left: 43
        on right: 37 38 40 41
    expression <expression_ptr> (60)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 25 35 36 37 40 41 42 44 45 46 47 48 49 50 51 52 53 54 58 68 69
    methodcall <methodcall_ptr> (61)
        on left: 64 65
        on right: 30 57
    arguments <expression_list_ptr> (62)
        on left: 66 67
        on right: 63 64 65
    arguments1 <expression_list_ptr> (63)
        on left: 68 69
        on right: 66 68
    type <type_ptr> (64)
        on left: 70 71 72 73
        on right: 8 9 14 15 17 21 22


State 0

    0 $accept: . Start $end

    ID  shift, and go to state 1

    Start   go to state 2
    class   go to state 3
    class1  go to state 4


State 1

    4 class1: ID . extends O_BRAC members methods C_BRAC
    5       | ID . extends O_BRAC members C_BRAC
    6       | ID . extends O_BRAC methods C_BRAC
    7       | ID . extends O_BRAC C_BRAC

    EXTENDS_T  shift, and go to state 5

    $default  reduce using rule 11 (extends)

    extends  go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: class .

    $default  reduce using rule 1 (Start)


State 4

    2 class: class1 . class
    3      | class1 .

    ID  shift, and go to state 1

    $default  reduce using rule 3 (class)

    class   go to state 8
    class1  go to state 4


State 5

   10 extends: EXTENDS_T . ID

    ID  shift, and go to state 9


State 6

    4 class1: ID extends . O_BRAC members methods C_BRAC
    5       | ID extends . O_BRAC members C_BRAC
    6       | ID extends . O_BRAC methods C_BRAC
    7       | ID extends . O_BRAC C_BRAC

    O_BRAC  shift, and go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 class: class1 class .

    $default  reduce using rule 2 (class)


State 9

   10 extends: EXTENDS_T ID .

    $default  reduce using rule 10 (extends)


State 10

    4 class1: ID extends O_BRAC . members methods C_BRAC
    5       | ID extends O_BRAC . members C_BRAC
    6       | ID extends O_BRAC . methods C_BRAC
    7       | ID extends O_BRAC . C_BRAC

    INTEGER  shift, and go to state 11
    BOOLEAN  shift, and go to state 12
    C_BRAC   shift, and go to state 13
    ID       shift, and go to state 14
    NONE     shift, and go to state 15

    C_BRAC  [reduce using rule 13 (methods)]

    members  go to state 16
    methods  go to state 17
    method   go to state 18
    type     go to state 19


State 11

   70 type: INTEGER .

    $default  reduce using rule 70 (type)


State 12

   71 type: BOOLEAN .

    $default  reduce using rule 71 (type)


State 13

    7 class1: ID extends O_BRAC C_BRAC .

    $default  reduce using rule 7 (class1)


State 14

   14 method: ID . O_PAREN parameters C_PAREN ARROW type O_BRAC body C_BRAC
   72 type: ID .

    O_PAREN  shift, and go to state 20

    $default  reduce using rule 72 (type)


State 15

   73 type: NONE .

    $default  reduce using rule 73 (type)


State 16

    4 class1: ID extends O_BRAC members . methods C_BRAC
    5       | ID extends O_BRAC members . C_BRAC
    8 members: members . type ID SEMICOLON

    INTEGER  shift, and go to state 11
    BOOLEAN  shift, and go to state 12
    C_BRAC   shift, and go to state 21
    ID       shift, and go to state 14
    NONE     shift, and go to state 15

    C_BRAC  [reduce using rule 13 (methods)]

    methods  go to state 22
    method   go to state 18
    type     go to state 23


State 17

    6 class1: ID extends O_BRAC methods . C_BRAC

    C_BRAC  shift, and go to state 24


State 18

   12 methods: method . methods

    ID  shift, and go to state 25

    $default  reduce using rule 13 (methods)

    methods  go to state 26
    method   go to state 18


State 19

    9 members: type . ID SEMICOLON

    ID  shift, and go to state 27


State 20

   14 method: ID O_PAREN . parameters C_PAREN ARROW type O_BRAC body C_BRAC

    INTEGER  shift, and go to state 11
    BOOLEAN  shift, and go to state 12
    ID       shift, and go to state 28
    NONE     shift, and go to state 15

    $default  reduce using rule 16 (parameters)

    parameters  go to state 29
    type        go to state 30


State 21

    5 class1: ID extends O_BRAC members C_BRAC .

    $default  reduce using rule 5 (class1)


State 22

    4 class1: ID extends O_BRAC members methods . C_BRAC

    C_BRAC  shift, and go to state 31


State 23

    8 members: members type . ID SEMICOLON

    ID  shift, and go to state 32


State 24

    6 class1: ID extends O_BRAC methods C_BRAC .

    $default  reduce using rule 6 (class1)


State 25

   14 method: ID . O_PAREN parameters C_PAREN ARROW type O_BRAC body C_BRAC

    O_PAREN  shift, and go to state 20


State 26

   12 methods: method methods .

    $default  reduce using rule 12 (methods)


State 27

    9 members: type ID . SEMICOLON

    SEMICOLON  shift, and go to state 33


State 28

   72 type: ID .

    $default  reduce using rule 72 (type)


State 29

   14 method: ID O_PAREN parameters . C_PAREN ARROW type O_BRAC body C_BRAC

    C_PAREN  shift, and go to state 34


State 30

   15 parameters: type . ID parameters1

    ID  shift, and go to state 35


State 31

    4 class1: ID extends O_BRAC members methods C_BRAC .

    $default  reduce using rule 4 (class1)


State 32

    8 members: members type ID . SEMICOLON

    SEMICOLON  shift, and go to state 36


State 33

    9 members: type ID SEMICOLON .

    $default  reduce using rule 9 (members)


State 34

   14 method: ID O_PAREN parameters C_PAREN . ARROW type O_BRAC body C_BRAC

    ARROW  shift, and go to state 37


State 35

   15 parameters: type ID . parameters1

    COMMA  shift, and go to state 38

    $default  reduce using rule 18 (parameters1)

    parameters1  go to state 39


State 36

    8 members: members type ID SEMICOLON .

    $default  reduce using rule 8 (members)


State 37

   14 method: ID O_PAREN parameters C_PAREN ARROW . type O_BRAC body C_BRAC

    INTEGER  shift, and go to state 11
    BOOLEAN  shift, and go to state 12
    ID       shift, and go to state 28
    NONE     shift, and go to state 15

    type  go to state 40


State 38

   17 parameters1: COMMA . type ID parameters1

    INTEGER  shift, and go to state 11
    BOOLEAN  shift, and go to state 12
    ID       shift, and go to state 28
    NONE     shift, and go to state 15

    type  go to state 41


State 39

   15 parameters: type ID parameters1 .

    $default  reduce using rule 15 (parameters)


State 40

   14 method: ID O_PAREN parameters C_PAREN ARROW type . O_BRAC body C_BRAC

    O_BRAC  shift, and go to state 42


State 41

   17 parameters1: COMMA type . ID parameters1

    ID  shift, and go to state 43


State 42

   14 method: ID O_PAREN parameters C_PAREN ARROW type O_BRAC . body C_BRAC

    INTEGER  shift, and go to state 11
    BOOLEAN  shift, and go to state 12
    WHILE_T  shift, and go to state 44
    IF       shift, and go to state 45
    DO       shift, and go to state 46
    PRINT    shift, and go to state 47
    ID       shift, and go to state 48
    NONE     shift, and go to state 15

    $default  reduce using rule 28 (statements)

    body          go to state 49
    declarations  go to state 50
    statements    go to state 51
    statement     go to state 52
    assignment    go to state 53
    if_else       go to state 54
    while_loop    go to state 55
    do_while      go to state 56
    print         go to state 57
    methodcall    go to state 58
    type          go to state 59


State 43

   17 parameters1: COMMA type ID . parameters1

    COMMA  shift, and go to state 38

    $default  reduce using rule 18 (parameters1)

    parameters1  go to state 60


State 44

   40 while_loop: WHILE_T . expression O_BRAC block C_BRAC

    O_PAREN  shift, and go to state 61
    TRUE     shift, and go to state 62
    FALSE    shift, and go to state 63
    NEW      shift, and go to state 64
    NUM      shift, and go to state 65
    ID       shift, and go to state 66
    MINUS    shift, and go to state 67
    NOT      shift, and go to state 68

    expression  go to state 69
    methodcall  go to state 70


State 45

   37 if_else: IF . expression O_BRAC block C_BRAC else

    O_PAREN  shift, and go to state 61
    TRUE     shift, and go to state 62
    FALSE    shift, and go to state 63
    NEW      shift, and go to state 64
    NUM      shift, and go to state 65
    ID       shift, and go to state 66
    MINUS    shift, and go to state 67
    NOT      shift, and go to state 68

    expression  go to state 71
    methodcall  go to state 70


State 46

   41 do_while: DO . O_BRAC block C_BRAC WHILE_T O_PAREN expression C_PAREN SEMICOLON

    O_BRAC  shift, and go to state 72


State 47

   42 print: PRINT . expression SEMICOLON

    O_PAREN  shift, and go to state 61
    TRUE     shift, and go to state 62
    FALSE    shift, and go to state 63
    NEW      shift, and go to state 64
    NUM      shift, and go to state 65
    ID       shift, and go to state 66
    MINUS    shift, and go to state 67
    NOT      shift, and go to state 68

    expression  go to state 73
    methodcall  go to state 70


State 48

   35 assignment: ID . ASSIGN expression SEMICOLON
   36           | ID . DOT ID ASSIGN expression SEMICOLON
   64 methodcall: ID . O_PAREN arguments C_PAREN
   65           | ID . DOT ID O_PAREN arguments C_PAREN
   72 type: ID .

    DOT      shift, and go to state 74
    O_PAREN  shift, and go to state 75
    ASSIGN   shift, and go to state 76

    $default  reduce using rule 72 (type)


State 49

   14 method: ID O_PAREN parameters C_PAREN ARROW type O_BRAC body . C_BRAC

    C_BRAC  shift, and go to state 77


State 50

   19 body: declarations . statements return
   21 declarations: declarations . type id_list

    INTEGER  shift, and go to state 11
    BOOLEAN  shift, and go to state 12
    WHILE_T  shift, and go to state 44
    IF       shift, and go to state 45
    DO       shift, and go to state 46
    PRINT    shift, and go to state 47
    ID       shift, and go to state 48
    NONE     shift, and go to state 15

    $default  reduce using rule 28 (statements)

    statements  go to state 78
    statement   go to state 52
    assignment  go to state 53
    if_else     go to state 54
    while_loop  go to state 55
    do_while    go to state 56
    print       go to state 57
    methodcall  go to state 58
    type        go to state 79


State 51

   20 body: statements . return

    RETURN  shift, and go to state 80

    $default  reduce using rule 26 (return)

    return  go to state 81


State 52

   27 statements: statement . statements

    WHILE_T  shift, and go to state 44
    IF       shift, and go to state 45
    DO       shift, and go to state 46
    PRINT    shift, and go to state 47
    ID       shift, and go to state 82

    $default  reduce using rule 28 (statements)

    statements  go to state 83
    statement   go to state 52
    assignment  go to state 53
    if_else     go to state 54
    while_loop  go to state 55
    do_while    go to state 56
    print       go to state 57
    methodcall  go to state 58


State 53

   29 statement: assignment .

    $default  reduce using rule 29 (statement)


State 54

   31 statement: if_else .

    $default  reduce using rule 31 (statement)


State 55

   32 statement: while_loop .

    $default  reduce using rule 32 (statement)


State 56

   33 statement: do_while .

    $default  reduce using rule 33 (statement)


State 57

   34 statement: print .

    $default  reduce using rule 34 (statement)


State 58

   30 statement: methodcall . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 59

   22 declarations: type . id_list

    ID  shift, and go to state 85

    id_list  go to state 86


State 60

   17 parameters1: COMMA type ID parameters1 .

    $default  reduce using rule 17 (parameters1)


State 61

   58 expression: O_PAREN . expression C_PAREN

    O_PAREN  shift, and go to state 61
    TRUE     shift, and go to state 62
    FALSE    shift, and go to state 63
    NEW      shift, and go to state 64
    NUM      shift, and go to state 65
    ID       shift, and go to state 66
    MINUS    shift, and go to state 67
    NOT      shift, and go to state 68

    expression  go to state 87
    methodcall  go to state 70


State 62

   60 expression: TRUE .

    $default  reduce using rule 60 (expression)


State 63

   61 expression: FALSE .

    $default  reduce using rule 61 (expression)


State 64

   62 expression: NEW . ID
   63           | NEW . ID O_PAREN arguments C_PAREN

    ID  shift, and go to state 88


State 65

   59 expression: NUM .

    $default  reduce using rule 59 (expression)


State 66

   55 expression: ID .
   56           | ID . DOT ID
   64 methodcall: ID . O_PAREN arguments C_PAREN
   65           | ID . DOT ID O_PAREN arguments C_PAREN

    DOT      shift, and go to state 89
    O_PAREN  shift, and go to state 75

    $default  reduce using rule 55 (expression)


State 67

   54 expression: MINUS . expression

    O_PAREN  shift, and go to state 61
    TRUE     shift, and go to state 62
    FALSE    shift, and go to state 63
    NEW      shift, and go to state 64
    NUM      shift, and go to state 65
    ID       shift, and go to state 66
    MINUS    shift, and go to state 67
    NOT      shift, and go to state 68

    expression  go to state 90
    methodcall  go to state 70


State 68

   53 expression: NOT . expression

    O_PAREN  shift, and go to state 61
    TRUE     shift, and go to state 62
    FALSE    shift, and go to state 63
    NEW      shift, and go to state 64
    NUM      shift, and go to state 65
    ID       shift, and go to state 66
    MINUS    shift, and go to state 67
    NOT      shift, and go to state 68

    expression  go to state 91
    methodcall  go to state 70


State 69

   40 while_loop: WHILE_T expression . O_BRAC block C_BRAC
   44 expression: expression . PLUS expression
   45           | expression . MINUS expression
   46           | expression . MULT expression
   47           | expression . DIV expression
   48           | expression . GREATER expression
   49           | expression . GREATER_EQUAL expression
   50           | expression . EQUALS expression
   51           | expression . AND expression
   52           | expression . OR expression

    O_BRAC         shift, and go to state 92
    OR             shift, and go to state 93
    AND            shift, and go to state 94
    GREATER        shift, and go to state 95
    GREATER_EQUAL  shift, and go to state 96
    EQUALS         shift, and go to state 97
    PLUS           shift, and go to state 98
    MINUS          shift, and go to state 99
    MULT           shift, and go to state 100
    DIV            shift, and go to state 101


State 70

   57 expression: methodcall .

    $default  reduce using rule 57 (expression)


State 71

   37 if_else: IF expression . O_BRAC block C_BRAC else
   44 expression: expression . PLUS expression
   45           | expression . MINUS expression
   46           | expression . MULT expression
   47           | expression . DIV expression
   48           | expression . GREATER expression
   49           | expression . GREATER_EQUAL expression
   50           | expression . EQUALS expression
   51           | expression . AND expression
   52           | expression . OR expression

    O_BRAC         shift, and go to state 102
    OR             shift, and go to state 93
    AND            shift, and go to state 94
    GREATER        shift, and go to state 95
    GREATER_EQUAL  shift, and go to state 96
    EQUALS         shift, and go to state 97
    PLUS           shift, and go to state 98
    MINUS          shift, and go to state 99
    MULT           shift, and go to state 100
    DIV            shift, and go to state 101


State 72

   41 do_while: DO O_BRAC . block C_BRAC WHILE_T O_PAREN expression C_PAREN SEMICOLON

    WHILE_T  shift, and go to state 44
    IF       shift, and go to state 45
    DO       shift, and go to state 46
    PRINT    shift, and go to state 47
    ID       shift, and go to state 82

    statement   go to state 103
    assignment  go to state 53
    if_else     go to state 54
    while_loop  go to state 55
    do_while    go to state 56
    print       go to state 57
    block       go to state 104
    methodcall  go to state 58


State 73

   42 print: PRINT expression . SEMICOLON
   44 expression: expression . PLUS expression
   45           | expression . MINUS expression
   46           | expression . MULT expression
   47           | expression . DIV expression
   48           | expression . GREATER expression
   49           | expression . GREATER_EQUAL expression
   50           | expression . EQUALS expression
   51           | expression . AND expression
   52           | expression . OR expression

    SEMICOLON      shift, and go to state 105
    OR             shift, and go to state 93
    AND            shift, and go to state 94
    GREATER        shift, and go to state 95
    GREATER_EQUAL  shift, and go to state 96
    EQUALS         shift, and go to state 97
    PLUS           shift, and go to state 98
    MINUS          shift, and go to state 99
    MULT           shift, and go to state 100
    DIV            shift, and go to state 101


State 74

   36 assignment: ID DOT . ID ASSIGN expression SEMICOLON
   65 methodcall: ID DOT . ID O_PAREN arguments C_PAREN

    ID  shift, and go to state 106


State 75

   64 methodcall: ID O_PAREN . arguments C_PAREN

    O_PAREN  shift, and go to state 61
    TRUE     shift, and go to state 62
    FALSE    shift, and go to state 63
    NEW      shift, and go to state 64
    NUM      shift, and go to state 65
    ID       shift, and go to state 66
    MINUS    shift, and go to state 67
    NOT      shift, and go to state 68

    $default  reduce using rule 67 (arguments)

    expression  go to state 107
    methodcall  go to state 70
    arguments   go to state 108
    arguments1  go to state 109


State 76

   35 assignment: ID ASSIGN . expression SEMICOLON

    O_PAREN  shift, and go to state 61
    TRUE     shift, and go to state 62
    FALSE    shift, and go to state 63
    NEW      shift, and go to state 64
    NUM      shift, and go to state 65
    ID       shift, and go to state 66
    MINUS    shift, and go to state 67
    NOT      shift, and go to state 68

    expression  go to state 110
    methodcall  go to state 70


State 77

   14 method: ID O_PAREN parameters C_PAREN ARROW type O_BRAC body C_BRAC .

    $default  reduce using rule 14 (method)


State 78

   19 body: declarations statements . return

    RETURN  shift, and go to state 80

    $default  reduce using rule 26 (return)

    return  go to state 111


State 79

   21 declarations: declarations type . id_list

    ID  shift, and go to state 85

    id_list  go to state 112


State 80

   25 return: RETURN . expression SEMICOLON

    O_PAREN  shift, and go to state 61
    TRUE     shift, and go to state 62
    FALSE    shift, and go to state 63
    NEW      shift, and go to state 64
    NUM      shift, and go to state 65
    ID       shift, and go to state 66
    MINUS    shift, and go to state 67
    NOT      shift, and go to state 68

    expression  go to state 113
    methodcall  go to state 70


State 81

   20 body: statements return .

    $default  reduce using rule 20 (body)


State 82

   35 assignment: ID . ASSIGN expression SEMICOLON
   36           | ID . DOT ID ASSIGN expression SEMICOLON
   64 methodcall: ID . O_PAREN arguments C_PAREN
   65           | ID . DOT ID O_PAREN arguments C_PAREN

    DOT      shift, and go to state 74
    O_PAREN  shift, and go to state 75
    ASSIGN   shift, and go to state 76


State 83

   27 statements: statement statements .

    $default  reduce using rule 27 (statements)


State 84

   30 statement: methodcall SEMICOLON .

    $default  reduce using rule 30 (statement)


State 85

   23 id_list: ID . COMMA id_list
   24        | ID . SEMICOLON

    SEMICOLON  shift, and go to state 114
    COMMA      shift, and go to state 115


State 86

   22 declarations: type id_list .

    $default  reduce using rule 22 (declarations)


State 87

   44 expression: expression . PLUS expression
   45           | expression . MINUS expression
   46           | expression . MULT expression
   47           | expression . DIV expression
   48           | expression . GREATER expression
   49           | expression . GREATER_EQUAL expression
   50           | expression . EQUALS expression
   51           | expression . AND expression
   52           | expression . OR expression
   58           | O_PAREN expression . C_PAREN

    C_PAREN        shift, and go to state 116
    OR             shift, and go to state 93
    AND            shift, and go to state 94
    GREATER        shift, and go to state 95
    GREATER_EQUAL  shift, and go to state 96
    EQUALS         shift, and go to state 97
    PLUS           shift, and go to state 98
    MINUS          shift, and go to state 99
    MULT           shift, and go to state 100
    DIV            shift, and go to state 101


State 88

   62 expression: NEW ID .
   63           | NEW ID . O_PAREN arguments C_PAREN

    O_PAREN  shift, and go to state 117
